# Resume-RAG

./: .gitignore  README.md  backend_logs.txt  backend_logs_utf8.txt  check_db_diag.py  docker-compose.yml  test_chat.py  test_history.py  test_rag_citations.py
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/data/: schema.json
backend/data/chroma_db/: chroma.sqlite3
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: ExtractedData.jsx  ResumeUpload.jsx  SchemaEditor.jsx
